# four_rendering

./: CMakeLists.txt  README.md  docker-compose.yml  main.cpp  sample_application.cpp  sample_application.h
builders/: CMakeLists.txt  texture_loader.h  vulkan_builder.h  vulkan_structures.h
builders/cpp/: texture_loader.cpp  vulkan_builder.cpp
camera/: CMakeLists.txt  camera.h
camera/cpp/: camera.cpp
docker/: Dockerfile-Dev  Dockerfile-Dev-Base
drawing/: CMakeLists.txt  buffer.h  descriptor_set.h  descriptor_set_types.h  graphics_pipeline.h  renderer.h  vertex_buffer.h  vertex_info.h  vertex_types.h
drawing/cpp/: buffer.cpp  descriptor_set.cpp  graphics_pipeline.cpp  renderer.cpp  vertex_buffer.cpp
scripts/: compile_shaders.sh
shaders/: CMakeLists.txt  shader.h
shaders/cpp/: shader.cpp
shaders/slang/: basic.slang  grid.slang
shaders/spirv/: basic.spv  grid.spv
utils/: CMakeLists.txt  buffer_utils.h  error.h  file_system.h  global.h  image_utils.h  scoped_command_buffer.h
utils/cpp/: buffer_utils.cpp  file_system.cpp  image_utils.cpp  scoped_command_buffer.cpp
window/: CMakeLists.txt  GLFW_window.h
window/cpp/: GLFW_window.cpp
